Fix homepage link URL in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="card">
     <h1>Thanks — we’ll be in touch soon</h1>
     <p>Your request has been received. A team member will contact you.</p>
-    <a class="button" href="https://claritypennine.co.uk/">HOME</a>
+    <a class="button" href="https://clarity-pennine.co.uk/">HOME</a>
   </div>
 </body>
 </html>
